--- a/Fashion_CNN.ipynb
+++ b/Fashion_CNN.ipynb
@@ -49,17 +49,8 @@
     "from tensorflow.keras.optimizers import SGD\n",
     "from tensorflow.keras.optimizers import RMSprop\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
     "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
+    " \n",
     "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
    ]
   },
@@ -303,7 +294,7 @@
     }
    ],
    "source": [
-    "train_data = pd.read_csv('../input/cap-4611-2021-fall-assignment-4/train.csv')\n",
+    "train_data = pd.read_csv('train.csv')\n",
     "train_data.head()"
    ]
   },
@@ -530,7 +521,7 @@
     }
    ],
    "source": [
-    "test_data = pd.read_csv('../input/cap-4611-2021-fall-assignment-4/eval.csv')\n",
+    "test_data = pd.read_csv('eval.csv')\n",
     "test_data.head()"
    ]
   },
